Update Some issue's in code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="header-nav">
           <div class="logo">
-          <img src="./assets/images/logo.svg">
+            <img src="./assets/images/logo.svg" alt="" />
           </div>
           <ul class="links">
             <li><a href="#service">Features</a></li>
@@ -36,41 +36,71 @@
     <div class="file-upload" id="file-upload">
       <div class="file-upload-content">
         <div>
-          <img src="./assets/images/illustration-intro.png">
+          <img src="./assets/images/illustration-intro.png" alt="" />
         </div>
         <div>
           <h1>All your files in one secure location, accessible anywhere.</h1>
-          <p>Fylo stores all your most important files in one secure loction.Access them wherever you need, share and collaborate with friends family, and co-working</p>
-          <button>Get Started</button>
+          <p>
+            Fylo stores all your most important files in one secure
+            loction.Access them wherever you need, share and collaborate with
+            friends family, and co-working
+          </p>
+          <a href="#">Get Started</a>
         </div>
       </div>
-      <img class="file-upload-bg" src="./assets/images/bg-curvy-desktop.svg"></img>
+      <img
+        class="file-upload-bg"
+        src="./assets/images/bg-curvy-desktop.svg"
+        alt=""
+      />
       <div class="curvy-bg"></div>
-      <img class="file-upload-bg-2" src="./assets/images/bg-curvy-mobile.svg"></img>
+      <img
+        class="file-upload-bg-2"
+        src="./assets/images/bg-curvy-mobile.svg"
+        alt=""
+      />
     </div>
 
     <div class="service" id="service">
       <div class="container">
         <div class="service-content">
           <div class="service-item">
-            <div><img src="./assets/images/icon-access-anywhere.svg"></div>
+            <div>
+              <img src="./assets/images/icon-access-anywhere.svg" alt="" />
+            </div>
             <h3>Access your files, anywhere</h3>
-            <p>The ability to use a smartphone, tablet, or comupter to access your account means your files follow you everywhere.</p>
+            <p>
+              The ability to use a smartphone, tablet, or comupter to access
+              your account means your files follow you everywhere.
+            </p>
           </div>
           <div class="service-item">
-            <div><img src="./assets/images/icon-security.svg"></div>
+            <div><img src="./assets/images/icon-security.svg" alt="" /></div>
             <h3>Security you can trust</h3>
-            <p>2-factor authenticion and user-controlled encryption are just a couple of the security features we allow to help secure your files.</p>
+            <p>
+              2-factor authenticion and user-controlled encryption are just a
+              couple of the security features we allow to help secure your
+              files.
+            </p>
           </div>
           <div class="service-item">
-            <div><img src="./assets/images/icon-collaboration.svg"></div>
+            <div>
+              <img src="./assets/images/icon-collaboration.svg" alt="" />
+            </div>
             <h3>Real-time collaboration</h3>
-            <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required.</p>
+            <p>
+              Securely share files and folders with friends, family and
+              colleagues for live collaboration. No email attachments required.
+            </p>
           </div>
           <div class="service-item">
-            <div><img src="./assets/images/icon-any-file.svg" ></div>
+            <div><img src="./assets/images/icon-any-file.svg" alt="" /></div>
             <h3>Store any type of files</h3>
-            <p>whether you're sharing holidays photos or work documents, Flyo has you covered allowing for all file types to be securely stored and shared.</p>
+            <p>
+              whether you're sharing holidays photos or work documents, Flyo has
+              you covered allowing for all file types to be securely stored and
+              shared.
+            </p>
           </div>
         </div>
       </div>
@@ -79,12 +109,22 @@
     <div class="about-us" id="about-us">
       <div class="container">
         <div class="about-us-content">
-          <img src="./assets/images/illustration-stay-productive.png">
+          <img src="./assets/images/illustration-stay-productive.png" alt="" />
           <div>
-            <h1>Stay productive,<br> wherever you are</h1>
+            <h1>
+              Stay productive,<br />
+              wherever you are
+            </h1>
             <div>
-              <p>Never let loction be an issue when accessing your files. Flyo has you convered for all your file storage needs</p>
-              <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required. </p>
+              <p>
+                Never let loction be an issue when accessing your files. Flyo
+                has you convered for all your file storage needs
+              </p>
+              <p>
+                Securely share files and folders with friends, family and
+                colleagues for live collaboration. No email attachments
+                required.
+              </p>
             </div>
             <a href="#">See how Flyo Works <span>⬤</span></a>
           </div>
@@ -95,11 +135,16 @@
     <div class="testimonial" id="testimonial">
       <div class="container">
         <div class="testimonial-content">
-          <img class="bg-quotes" src="./assets/images/bg-quotes.png">
+          <img class="bg-quotes" src="./assets/images/bg-quotes.png" alt="" />
           <div class="testimonial-card">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit tempore vel expedita vero nobis esse aperiam nulla inventore molestiae? Provident similique voluptatibus ducimus mollitia exercitationem harum modi cumque id?</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              suscipit tempore vel expedita vero nobis esse aperiam nulla
+              inventore molestiae? Provident similique voluptatibus ducimus
+              mollitia exercitationem harum modi cumque id?
+            </p>
             <div class="person-info">
-              <img src="./assets/images/profile-1.jpg">
+              <img src="./assets/images/profile-1.jpg" alt="" />
               <div>
                 <h4>Satish Patel</h4>
                 <span>Founder & CEO, Huddle</span>
@@ -107,9 +152,14 @@
             </div>
           </div>
           <div class="testimonial-card">
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit tempore vel expedita vero nobis esse aperiam nulla inventore molestiae? Provident similique voluptatibus ducimus mollitia exercitationem harum modi cumque id?</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              suscipit tempore vel expedita vero nobis esse aperiam nulla
+              inventore molestiae? Provident similique voluptatibus ducimus
+              mollitia exercitationem harum modi cumque id?
+            </p>
             <div class="person-info">
-              <img src="./assets/images/profile-2.jpg">
+              <img src="./assets/images/profile-2.jpg" alt="" />
               <div>
                 <h4>Bruce McKenzle</h4>
                 <span>Founder & CEO, Huddle</span>
@@ -117,9 +167,14 @@
             </div>
           </div>
           <div class="testimonial-card">
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis suscipit tempore vel expedita vero nobis esse aperiam nulla inventore molestiae? Provident similique voluptatibus ducimus mollitia exercitationem harum modi cumque id?</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+              suscipit tempore vel expedita vero nobis esse aperiam nulla
+              inventore molestiae? Provident similique voluptatibus ducimus
+              mollitia exercitationem harum modi cumque id?
+            </p>
             <div class="person-info">
-              <img src="./assets/images/profile-3.jpg">
+              <img src="./assets/images/profile-3.jpg" alt="" />
               <div>
                 <h4>Iva Boyd</h4>
                 <span>Founder & CEO, Huddle</span>
@@ -132,21 +187,32 @@
 
     <footer id="footer">
       <div class="contact-us" id="contact-us">
-          <h1>Get early access Today</h1>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eligendi harum, eaque dicta asperiores, laboriosam provident ipsam alias ut,  eaque dicta asperiores, laboriosam provident ipsam alias ut!</p>
-          <div class="send-email">
-            <input type="email" id="email">
-            <input type="submit" id="btn" value="Get Started For Free">
-          </div>
-          <span id="validEmail" class="msg">Please Enter a Valid email address</span>
+        <h1>Get early access Today</h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque
+          eligendi harum, eaque dicta asperiores, laboriosam provident ipsam
+          alias ut, eaque dicta asperiores, laboriosam provident ipsam alias ut!
+        </p>
+        <div class="send-email">
+          <input type="email" id="email" />
+          <input type="submit" id="btn" value="Get Started For Free" />
+        </div>
+        <span id="validEmail" class="msg"
+          >Please Enter a Valid email address</span
+        >
       </div>
       <div class="info-parent">
         <div class="container">
-          <img src="./assets/images/logo.svg">
+          <img src="./assets/images/logo.svg" alt="" />
           <div class="info">
             <div>
               <i class="fa-solid fa-location-dot"></i>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam incidunt doloribus asperiores magnam recusandae obcaecati tempora consectetur. Sit sunt id dignissimos labore iure quaerat voluptatum, laboriosam minus velit necessitatibus nisi.</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+                incidunt doloribus asperiores magnam recusandae obcaecati
+                tempora consectetur. Sit sunt id dignissimos labore iure quaerat
+                voluptatum, laboriosam minus velit necessitatibus nisi.
+              </p>
             </div>
             <div>
               <div>
